--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
+  "type": "module",
   "name": "tuiter-node-server-app",
   "version": "1.0.0",
   "description": "Node.js HTTP Web server for the Tuiter application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +23,9 @@
   "bugs": {
     "url": "https://github.com/mirajdesai1/tuiter-node-server-app/issues"
   },
-  "homepage": "https://github.com/mirajdesai1/tuiter-node-server-app#readme"
+  "homepage": "https://github.com/mirajdesai1/tuiter-node-server-app#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
+  }
 }
